# rust-plc

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  cliff.toml  deny.toml  release-plz.toml  todo.md
.cargo/: audit.toml  config.toml
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
crates/st-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/st-cli/src/: comm_setup.rs  main.rs
crates/st-cli/tests/: cli_smoke.rs
crates/st-comm-api/: CHANGELOG.md  Cargo.toml  README.md
crates/st-comm-api/src/: codegen.rs  config.rs  device.rs  error.rs  lib.rs  link.rs  native_fb.rs  profile.rs
crates/st-comm-api/tests/: profile_integration.rs
crates/st-comm-modbus/: CHANGELOG.md  Cargo.toml
crates/st-comm-modbus-tcp/: CHANGELOG.md  Cargo.toml
crates/st-comm-modbus-tcp/src/: client.rs  device_fb.rs  frame.rs  lib.rs  transport.rs
crates/st-comm-modbus-tcp/tests/: client_integration.rs
crates/st-comm-modbus/src/: crc.rs  device_fb.rs  frame.rs  frame_parser.rs  lib.rs  rtu_client.rs
crates/st-comm-modbus/tests/: full_stack_test.rs  rtu_integration_test.rs
crates/st-comm-serial/: CHANGELOG.md  Cargo.toml
crates/st-comm-serial/src/: bus.rs  framing.rs  lib.rs  link_fb.rs  shared.rs  transport.rs
crates/st-comm-serial/tests/: virtual_serial_test.rs
crates/st-comm-sim/: CHANGELOG.md  Cargo.toml  README.md
crates/st-comm-sim/src/: device.rs  lib.rs  link.rs  web.rs
crates/st-comm-upp/: CHANGELOG.md  Cargo.toml
crates/st-comm-upp/src/: address.rs  client.rs  command.rs  device_fb.rs  error.rs  frame_parser.rs  lib.rs  parser.rs  profile_binding.rs
crates/st-comm-upp/tests/: full_stack_test.rs  igar_simulator.rs  profile_yaml.rs  simulator_self_test.rs  upp_integration_test.rs
crates/st-compiler/: CHANGELOG.md  Cargo.toml  README.md
crates/st-compiler/src/: compile.rs  lib.rs
crates/st-compiler/tests/: class_compile_tests.rs  compile_tests.rs
crates/st-dap/: CHANGELOG.md  Cargo.toml  README.md
crates/st-dap/src/: comm_setup.rs  lib.rs  server.rs
crates/st-dap/tests/: dap_integration.rs
crates/st-deploy/: CHANGELOG.md  Cargo.toml  README.md
crates/st-deploy/src/: bundle.rs  debug_info.rs  installer.rs  lib.rs  ssh.rs  target.rs
crates/st-deploy/tests/: bundle_e2e.rs  bundle_mode_e2e.rs
crates/st-engine/: CHANGELOG.md  Cargo.toml  README.md
crates/st-engine/src/: comm_manager.rs  debug.rs  engine.rs  lib.rs  online_change.rs  retain_store.rs  vm.rs
crates/st-engine/tests/: class_instances_verify.rs  class_instantiation_advanced.rs  class_instantiation_probe.rs  class_runtime_probe.rs  class_vm_tests.rs  comm_multi_rate_test.rs  dap_breakpoint_test.rs  multi_file_oop_probe.rs  native_fb_integration.rs  native_fb_test.rs  online_change_tests.rs  oop_project_actual.rs  oop_project_probe.rs  partial_access_probe.rs  pointer_playground_verify.rs  pointer_probe.rs  retain_tests.rs  stdlib_tests.rs  string_tests.rs  struct_playground_verify.rs  struct_pointer_probe.rs  vm_tests.rs
crates/st-lsp/: CHANGELOG.md  Cargo.toml  README.md
crates/st-lsp/src/: completion.rs  document.rs  lib.rs  semantic_tokens.rs  server.rs
crates/st-lsp/tests/: lsp_integration.rs  unit_tests.rs
crates/st-monitor/: CHANGELOG.md  Cargo.toml  README.md
crates/st-monitor/src/: lib.rs  protocol.rs  server.rs
crates/st-monitor/tests/: monitor_tests.rs
crates/st-opcua-server/: CHANGELOG.md  Cargo.toml  README.md
crates/st-opcua-server/src/: address_space.rs  config.rs  lib.rs  type_map.rs  value_sync.rs  write_handler.rs
crates/st-opcua-server/tests/: mock_provider.rs
crates/st-plc-runtime/: Cargo.toml
crates/st-plc-runtime/src/: main.rs
crates/st-plc-runtime/tests/: e2e_installer.rs
crates/st-runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/st-runtime/src/: comm_manager.rs  debug.rs  engine.rs  lib.rs  main.rs  online_change.rs  vm.rs
crates/st-runtime/tests/: class_instances_verify.rs  class_instantiation_advanced.rs  class_instantiation_probe.rs  class_runtime_probe.rs  class_vm_tests.rs  cli_smoke.rs  dap_breakpoint_test.rs  e2e_installer.rs  multi_file_oop_probe.rs  online_change_tests.rs  oop_project_actual.rs  oop_project_probe.rs  partial_access_probe.rs  pointer_playground_verify.rs  pointer_probe.rs  stdlib_tests.rs  struct_playground_verify.rs  struct_pointer_probe.rs  vm_tests.rs
crates/st-semantics/: CHANGELOG.md  Cargo.toml  README.md
crates/st-semantics/src/: analyze.rs  diagnostic.rs  lib.rs  scope.rs  types.rs
crates/st-semantics/tests/: call_tests.rs  class_tests.rs  control_flow_tests.rs  coverage_gaps.rs  end_to_end_tests.rs  scope_tests.rs  struct_array_tests.rs  test_helpers.rs  type_tests.rs  warning_tests.rs
crates/st-syntax/: CHANGELOG.md  Cargo.toml  README.md
crates/st-syntax/src/: ast.rs  lib.rs  lower.rs  multi_file.rs  project.rs
crates/st-syntax/tests/: coverage_gaps.rs  lower_tests.rs
crates/st-target-agent/: CHANGELOG.md  Cargo.toml  README.md
crates/st-target-agent/src/: auth.rs  config.rs  dap_attach_handler.rs  dap_proxy.rs  error.rs  lib.rs  logging.rs  main.rs  opcua_bridge.rs  program_store.rs  runtime_manager.rs  server.rs  singleton.rs  watchdog.rs
crates/st-target-agent/src/api/: logs.rs  mod.rs  monitor_ws.rs  program.rs  status.rs  variables.rs
crates/st-target-agent/tests/: api_integration.rs  cli_smoke.rs  dap_proxy_integration.rs  e2e_qemu.rs  opcua_echo.rs  retain_e2e.rs
docker/: playwright.Dockerfile  test.Dockerfile
docs/: book.toml  custom.css
plan/: cross_compilation_gaps.md  dap.md  design_comm.md  design_core.md  design_deploy.md  design_igar.md  implementation.md  implementation_comm.md  implementation_core.md  implementation_dap.md  implementation_deploy.md  implementation_igar.md  implementation_native.md  implementation_opcua.md  manual_checks.md  manual_modbus_testing.md
playground/: 01_hello.st  02_types_and_functions.st  03_pid_controller.st  04_state_machine.st  05_errors_demo.st  06_full_demo.st  07_stdlib_demo.st  08_custom_module.st  09_pointers.st  10_classes.st  (+8 more)
(+184 files in other folders)
