[workspace]
members = [
    "crates/st-grammar",
    "crates/st-syntax",
    "crates/st-semantics",
    "crates/st-ir",
    "crates/st-compiler",
    "crates/st-engine",
    "crates/st-lsp",
    "crates/st-dap",
    "crates/st-monitor",
    "crates/st-cli",
    "crates/st-comm-api",
    "crates/st-comm-modbus",
    "crates/st-comm-serial",
    "crates/st-comm-sim",
    "crates/st-deploy",
    "crates/st-target-agent",
    "crates/st-runtime",
    "crates/st-opcua-server",
]
resolver = "3"

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "GPL-3.0-or-later"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
glob = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"

# LSP
tower-lsp = "0.20"
lsp-types = "0.97"

# DAP
dap = "0.4.1-alpha1"

# Parsing
tree-sitter = "0.26"

# Internal crates
st-grammar = { path = "crates/st-grammar" }
st-syntax = { path = "crates/st-syntax" }
st-semantics = { path = "crates/st-semantics" }
st-ir = { path = "crates/st-ir" }
st-compiler = { path = "crates/st-compiler" }
st-engine = { path = "crates/st-engine" }
st-lsp = { path = "crates/st-lsp" }
st-dap = { path = "crates/st-dap" }
st-monitor = { path = "crates/st-monitor" }
st-cli = { path = "crates/st-cli" }
st-deploy = { path = "crates/st-deploy" }

# Optimized profile for static target binaries (musl)
[profile.release-static]
inherits = "release"
opt-level = "s"        # Optimize for size
lto = true             # Link-time optimization (smaller + faster)
strip = true           # Strip debug symbols
panic = "abort"        # No unwinding (smaller binary)
codegen-units = 1      # Maximum optimization
