[package]
name = "st-cli"
description = "CLI entry point for the IEC 61131-3 compiler toolchain"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
st-grammar.workspace = true
st-syntax.workspace = true
st-semantics.workspace = true
st-compiler.workspace = true
st-ir.workspace = true
st-runtime.workspace = true
st-comm-api = { path = "../st-comm-api" }
st-comm-sim = { path = "../st-comm-sim" }
st-deploy = { path = "../st-deploy" }
st-lsp.workspace = true
st-dap.workspace = true
st-monitor.workspace = true
tokio.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
