[package]
name = "st-comm-api"
description = "Communication framework API: NativeFb trait, device profiles, and registry for PLC I/O"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
st-ir.workspace = true
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
st-syntax = { path = "../st-syntax" }
