[package]
name = "st-comm-upp"
description = "UPP (Universal Pyrometer Protocol) over RS485 — Impac IGAR 6 / LumaSense / Advanced Energy pyrometers"
version = "0.3.4"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
st-comm-api = { path = "../st-comm-api" }
st-comm-serial = { path = "../st-comm-serial" }
st-ir.workspace = true
tracing.workspace = true

[dev-dependencies]
st-comm-api = { path = "../st-comm-api" }
st-syntax = { path = "../st-syntax" }
st-compiler = { path = "../st-compiler" }
st-engine = { path = "../st-engine" }
serialport = "4"
