[package]
name = "st-dap"
description = "Debug Adapter Protocol server for PLC online debugging"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.27.0"

[dependencies]
st-runtime.workspace = true
st-ir.workspace = true
st-syntax.workspace = true
st-compiler.workspace = true
st-comm-api = { path = "../st-comm-api" }
st-comm-sim = { path = "../st-comm-sim" }
dap.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
