[package]
name = "st-lsp"
description = "Language Server Protocol implementation for Structured Text"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dev-dependencies]
serde_json.workspace = true

[dependencies]
st-grammar.workspace = true
st-syntax.workspace = true
st-semantics.workspace = true
st-comm-api = { path = "../st-comm-api" }
st-comm-sim = { path = "../st-comm-sim" }
tower-lsp.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
