[package]
name = "st-monitor"
description = "WebSocket-based online monitoring server for PLC runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "monitor-test-server"
path = "src/bin/test_server.rs"

[dev-dependencies]
st-syntax.workspace = true
st-compiler.workspace = true

[dependencies]
st-engine.workspace = true
st-ir.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
