[package]
name = "st-semantics"
description = "Semantic analysis, type checking, and symbol tables for Structured Text"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
st-syntax.workspace = true
st-comm-api = { path = "../st-comm-api" }
thiserror.workspace = true

[dev-dependencies]
st-ir.workspace = true
